# colorid

./: .travis.yml  CITATION.CFF  Cargo.toml  LICENSE  README.md  ref_file_example.txt  test.sh
bit-vec_serde/src/: lib.rs
kmer_fa/: Cargo.toml  README.md
kmer_fa/src/: lib.rs  main.rs
refs/: Campylobacter_jejuni_CJ677CC524.fasta  Efaecalis_V583.fasta  Listeria_innocua_Clip11262.fasta  Listeria_ivanovii_ivanovii_NCTC11007.fasta  Listeria_ivanovii_londoniensis_WSLC30151.fasta  Listeria_marthii_S4_120.fasta  Listeria_monocytogenes_FSL_J1_208.fasta  Listeria_seeligeri_SLCC3954.fasta  Listeria_welshimeri_NCTC11857.fasta  LmonoEGDe.fasta  LmonoF23654b.fasta  LmonoHCC23.fasta  SRR2167842_ST0.fasta  Staphylococcus_aureus_NCTC8532.fasta  Staphylococcus_aureus_NCTC8532_2.fasta
simple_bloom/: Cargo.toml  README.md
simple_bloom/src/: lib.rs
src/: batch_search_pe.rs  bigsi.rs  build.rs  build_ex.rs  build_mt.rs  kmer.rs  lib.rs  main.rs  new_search.rs  perfect_search.rs  read_filter.rs  read_id_batch.rs  read_id_mt.rs  read_id_mt_pe.rs  read_id_mt_v3.rs  reports.rs  seq.rs  simple_bloom.rs
test_data/: ref_file.txt
test_data/refs/: Listeria_phage_B021.fasta  Listeria_phage_B051.fasta  Listeria_phage_B056.fasta  Listeria_phage_B545.fasta
workflows/MLST/: process_MLST.py
