[package]
name = "colorid"
version = "0.1.4"
authors = ["henk den bakker"]

[dependencies]
clap = "2.30.0"
bit-vec = { path = "./bit-vec_serde" }
fasthash = "0.3.2"
serde = "^1.0.89"
serde_json = "1.0.9"
bincode = "^1.1.2"
serde_derive = "1.0.89"
flate2 = "1.0.6"
indexmap = "1.0.0"
probability = "0.15.12"
rayon = "1.0.3"
fnv = "1.0.6"
systemstat = "0.1.3"

[profile.release]
lto = true

